src/app/home/home.page.scss
#container {
  text-align: center;

  position: absolute;
  left: 0;
  right: 0;
  top: 50%;
  transform: translateY(-50%);
  z-index: 1;
}

#container strong {
  font-size: 20px;
  line-height: 26px;
}

#container p {
  font-size: 16px;
  line-height: 22px;

  color: #8c8c8c;

  margin: 0;
}

#container a {
  text-decoration: none;
}

.match-parent {
  width: 100%;
  height: 70%;
}

#filter-menu {
  height: 30%;
}

#filter-menu ion-grid {
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
}

#filter-menu ion-row {

}

#filter-menu ion-col {
  display: flex;
  justify-content: space-evenly;
}

.marker {
  background-image: url(../../assets/icon/favicon.png);
  background-size: cover;
  width: 50px;
  height: 50px;
  border-radius: 50%;
  cursor: pointer;
}

